--- a/src/index.css
+++ b/src/index.css
@@ -264,3 +264,26 @@ section .collapse.in {
 .nav-link {
   text-transform: lowercase;
 }
+
+.gallery{
+  display: flex;
+  width: 900px;
+  margin: auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border: 2px dashed gray;
+}
+figure{
+  width: 300px;
+  margin: 0 0.5rem 1rem;
+  border: 1px solid #777;
+  padding: 8px;
+  box-sizing: border-box;
+}
+figure img{
+  width: 100%;
+}
+figure figcaption{
+  text-align: center;
+  padding: 8px 4px;
+}
