--- a/src/index.css
+++ b/src/index.css
@@ -279,11 +279,27 @@ figure{
   border: 1px solid #777;
   padding: 8px;
   box-sizing: border-box;
+  background: #f4f4f4;
+  box-shadow: 0 4px 5px 0 #00000052;
 }
 figure img{
   width: 100%;
+  height: 140px;
 }
 figure figcaption{
   text-align: center;
-  padding: 8px 4px;
+  padding: 10px 4px;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+figure h5 {
+  text-align: center;
+  padding: .5rem;
+}
+
+.portfolio {
+  justify-content: center;
 }
