--- a/src/index.css
+++ b/src/index.css
@@ -70,8 +70,11 @@ h2 {
   margin-bottom: 1rem;
 }
 
+*::selection {
+  background-color: #f5005259;
+}
+
 .footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px;
@@ -94,15 +97,56 @@ h2 {
   margin-bottom: .5rem;
 }
 
-.bg {
+.bg-white {
+  max-width: 100%!important;
   background: #fff;
-  border: 3px solid #343a40;
+  padding: 2rem;
+  padding-top: 0px;
+}
+
+.short-border {
+  border-top: 2px solid #db346c;
+  padding-top: 2rem;
+}
+
+.small-title {
+  text-transform: uppercase;
+  letter-spacing: 0.13rem;
+}
+
+b, strong {
+  font-weight: 500;
+  color: #db346c;
+}
+
+.no-mb {
+  margin-bottom: 0px;
+}
+
+.about-me-para {
+  font-size: 1.34rem;
+  letter-spacing: -0.02rem;
+  max-width: 750px;
+}
+
+.spc {
+  letter-spacing: -0.04rem;
+}
+
+.middle {
+  text-align: center;
+}
+
+.bg {
   padding: 2rem;
   padding-left: 2rem !important;
 }
 
 .bg-dark {
   background: #343a40;
+  max-width: 100%!important;
+  padding: 2rem;
+  padding-top: 2rem;
 }
 
 ul {
@@ -214,6 +258,47 @@ ul {
     border-bottom: none;
 }
 
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.skill-container {
+  width: 100%; /* Full width */
+  background: #353535;
+  border-radius: 10px;
+  border: #4a4a4a solid 2px;
+}
+
+.white-text {
+  color: #fff;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.skill-label {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+  border-radius: 10px;
+}
+
+.html {width: 98%; background-color: #04AA6D;} /* Green */
+.css {width: 95%; background-color: #2196F3;} /* Blue */
+.js {width: 82%; background-color: #f44336;} /* Red */
+.react {width: 38%; background-color: #f44336;} /* Red */
+.node {width: 82%; background-color: #f44336;} /* Red */
+.mongo {width: 82%; background-color: #f44336;} /* Red */
+.sql {width: 82%; background-color: #f44336;} /* Red */
+.cmd {width: 82%; background-color: #f44336;} /* Red */
+
+
 
 .hu {
     border-bottom: solid 2.5px #db346c;
@@ -221,6 +306,15 @@ ul {
 
 .faded {
     opacity: 65%;
+}
+
+.faded-20 {
+  opacity: 20%;
+}
+
+.badge-pink {
+  background-color: #db346c;
+  text-transform: uppercase;
 }
 
 a {
